chore: cấu hình postgre vào giai đoạn product-ready